# Test-python-on-EC2

./: app.py  app2.py  flask_server.py  img.ipynb  pyproject.toml  student_scores.csv
