[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Ahmad Alawad <ahmad.alawad.sf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
jupyterlab = "^2.2.9"
ipython = "^7.24.1"
nbconvert = "^6.0.7"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
